# libcbdetect

./: .gitignore  CMakeLists.txt  pyproject.toml
src/bindings/: CMakeLists.txt  pycbdetect.cpp
src/libcbdetect/: CMakeLists.txt
